Add the abillity to make likes for posts with data structure
